
EXTRA_DIST = 					\
	create-coverage-report.sh		\
	test-invalid-1-action-id.policy		\
	test-invalid-2-bogus-any.policy		\
	test-invalid-3-bogus-inactive.policy	\
	test-invalid-4-bogus-active.policy	\
	test-invalid-5-max-depth.policy		\
	test-valid-1.policy			\
	test-valid-2-annotations.policy		\
	test-valid-3-lang.policy		\
	test-valid-4-unknown-tags.policy

clean-local :
	rm -f *~
