
EXTRA_DIST = 						\
	create-coverage-report.sh			\
	invalid/test-invalid-1-action-id.policy		\
	invalid/test-invalid-2-bogus-any.policy		\
	invalid/test-invalid-3-bogus-inactive.policy	\
	invalid/test-invalid-4-bogus-active.policy	\
	invalid/test-invalid-5-max-depth.policy		\
	valid/test-valid-1.policy			\
	valid/test-valid-2-annotations.policy		\
	valid/test-valid-3-lang.policy			\
	valid/test-valid-4-unknown-tags.policy		\
	valid/test-valid-5-wrong-extension.policy~

clean-local :
	rm -f *~
